deploy_kubernetes/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: civil-appeal-case-tracker
  namespace: civil-appeal-case-tracker-prod
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    external-dns.alpha.kubernetes.io/set-identifier: civil-appeal-case-tracker-civil-appeal-case-tracker-prod-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecDefaultAction "phase:2,pass,log,tag:github_team=dts-legacy"
      SecRule REQUEST_HEADERS:User-Agent "@contains Amazonbot" "phase:1,log,deny,id:1000000"
      SecRule REQUEST_HEADERS:User-Agent "@contains gptbot" "phase:1,log,deny,id:1000001"
      SecRule REQUEST_HEADERS:User-Agent "@contains crawler" "phase:1,log,deny,id:1000002"
      SecRule REQUEST_HEADERS:User-Agent "@rx politico(-eu|-bot|bot@politico\.eu)" "phase:1,log,deny,t:lowercase,id:1000004"
      SecRule REQUEST_HEADERS:User-Agent "@rx awario(smartbot|bots@awario\.com)" "phase:1,log,deny,t:lowercase,id:1000005"
      SecRule REQUEST_HEADERS:User-Agent "@rx https://openai\.com/bot" "phase:1,log,deny,t:lowercase,id:1000006"
      SecRule REQUEST_HEADERS:User-Agent "@rx http://mj12bot.com/" "phase:1,log,deny,t:lowercase,id:1000007"
      SecRule REMOTE_ADDR "@ipMatch 34.248.124.42" "deny,status:403,msg:"DOS Blocked IP",id:1100000"
      SecRule REMOTE_ADDR "@ipMatch 34.249.147.142" "deny,status:403,msg:"DOS Blocked IP",id:1100001"
      SecRule REMOTE_ADDR "@ipMatch 34.196.108.51" "deny,status:403,msg:"DOS Blocked IP",id:1100002"
      SecRule REMOTE_ADDR "@ipMatch 34.195.221.239" "deny,status:403,msg:"DOS Blocked IP",id:1100003"
      SecRule REMOTE_ADDR "@ipMatch 34.248.222.208" "deny,status:403,msg:"DOS Blocked IP",id:1100004"
      SecRule REMOTE_ADDR "@ipMatch 52.17.9.21" "deny,status:403,msg:"DOS Blocked IP",id:1100005"
    nginx.ingress.kubernetes.io/server-snippet: |
      location @custom_403 {
        return 403 "<h1>There is a problem:</h1><br><h3>Go back to the previous page using the back arrow and enter valid content</h3>";
      }
      error_page 403 @custom_403;
spec:
  ingressClassName: modsec
  tls:
    - hosts:
        - casetracker.justice.gov.uk
      secretName: casetracker-justice-app-secret
  rules:
    - host: casetracker.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: civil-appeal-case-tracker-app-service
                port:
                  number: 80
